--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ webapps/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+bin/
+obj/
 
 ######################
 # Eclipse
